Styling Dashboard component

--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -1,6 +1,13 @@
-h3 {
+.dashboard-container {
+  margin-top: 75px;
+  padding: 0px 400px;
+  vertical-align: middle;
+}
+
+h3.dashboard {
+  color: #00adef;
+  font-size: 36px;
   text-align: center;
-  color: teal;
 }
 
 .module {
@@ -22,6 +29,7 @@ h3 {
     font-weight: 900;
     color: white;
     text-transform: uppercase;
+    text-align: center;
     margin: 0;
     position: absolute;
     top: 50%;
@@ -30,24 +38,56 @@ h3 {
     transform: translate(-50%, -50%);
   }
 
-  .waves-effect.waves-light.btn {
-    width: 200px;
-    height: 50px;
-    border-radius: 50px;
-    letter-spacing: 1px;
-    background-color: turquoise;
-    color: white;
-    padding: 12px;
-    align-items: center;
+  .waves-effect.waves-brown.waves-ripple:hover {
+    background-color: white;
+  }
+
+  .fa-list-ol, .fa-trophy, .fa-check, .fa-dice {
+    font-size: 50px;
+  }
+
+
+  /* MEDIA QUERIES */
+@media(max-width: 768px) {
+  .module {
+    background: 
+      linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url(https://images.pexels.com/photos/4239113/pexels-photo-4239113.jpeg);
+    background-size: cover;
+    width: 100%;
+    height: 250px;
+    margin: 20px 100px 0px 0px;
+    /* padding: 100px 100px; */
+    position: relative;
+    /* float: left; */
+  }
+
+  .dashboard-btn {
+    text-align: center;
+  }
 }
 
-button {
-  width: 150px;
-  height: 50px;
-  border-radius: 50px;
-  letter-spacing: 1px;
-  background-color: turquoise;
-  color: white;
-  padding: 12px;
-  align-items: center;
+@media(max-width: 580px) {
+  .module {
+    background: 
+      linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url(https://images.pexels.com/photos/4239113/pexels-photo-4239113.jpeg);
+    background-size: cover;
+    width: 100%;
+    height: 250px;
+    margin: 20px 100px 0px 0px;
+    /* padding: 100px 100px; */
+    position: relative;
+    /* float: left; */
+  }
+
+  .dashboard-btn {
+    text-align: center;
+  }
 }
