Styling Landing Page

--- a/client/src/components/layout/Landing.css
+++ b/client/src/components/layout/Landing.css
@@ -1,22 +1,34 @@
+body {
+  background-color: rebeccapurple;
+}
+
 .landing-container {
-    margin-top: 120px;
+    /* margin-top: 120px; */
+    background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("https://images.pexels.com/photos/373548/pexels-photo-373548.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
     padding: 0px 400px;
     vertical-align: middle;
 }
 
 h1 {
-  color: #00adef;
+  color: #ffffff;
 }
 
-.waves-effect.waves-brown.waves-ripple:hover {
-  background-color: white;
+p {
+  color: #ffffff;
+  font-size: 24px;
 }
 
 
 /* MEDIA QUERIES */
 @media(max-width: 768px) {
   .landing-container {
-    margin-top: 150px;
     padding: 0px 60px;
     vertical-align: middle;
 }
@@ -24,7 +36,6 @@ h1 {
 
 @media(max-width: 580px) {
   .landing-container {
-    margin-top: 120px;
     padding: 0px 20px;
     vertical-align: middle;
 }
