Updating Navbar & adding logo

--- a/client/src/components/layout/Navbar.css
+++ b/client/src/components/layout/Navbar.css
@@ -1,3 +1,15 @@
 nav {
     background-color: #42b984;
 }
+
+nav img {
+    height: 60px;
+    padding: 5px;
+
+}
+
+@media(max-width: 580px) {
+    nav img {
+        height: 45px;
+    }
+  }
