--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Poppins', sans-serif;
 }
 
+p {
+  font-size: 18px;
+}
+
 
 /* BUTTONS */
 .waves-effect.waves-green.waves-ripple {
@@ -32,4 +36,31 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 30px;
     border: none;
     letter-spacing: 1.5px;
+  }
+
+  
+/* FOOTER */
+  footer {
+    background: #999999;
+    color: #fff;
+    font-family: Poppins, sans-serif;
+    text-align: center;
+    height: 75px;
+    width: 100%;
+    position: sticky;
+    bottom: 0;
+    /* flex: 1 1 auto; */
+}
+
+  h4 .footer-style {
+    color: white;
+  }
+
+  h4 .footer-style:hover {
+    color: teal; 
+    text-decoration: none;
+  }
+
+  h4 .footer-style:hover:visited {
+    color: teal; 
   }
