combining game functions

--- a/client/src/components/game/game.css
+++ b/client/src/components/game/game.css
@@ -31,7 +31,7 @@ margin-bottom: -6px;
 
 .grid{
     border: black;
-    background: blue;
+    background: #17ca7f;
     width: fit-content;
     margin: auto;
 }
