update padding and text-center

--- a/client/src/components/layout/Landing.css
+++ b/client/src/components/layout/Landing.css
@@ -7,7 +7,7 @@
     url("https://images.pexels.com/photos/373548/pexels-photo-373548.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 0px 400px;
+    /* padding: 0px 400px; */
     vertical-align: middle;
 }
 
