--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -1,4 +1,4 @@
-footer {
+/* footer {
     background: #999999;
     color: #fff;
     text-align: center;
@@ -13,4 +13,4 @@ footer {
 
   h4 a:hover:visited {
     color: teal; 
-  }
+  } */
