--- a/client/src/components/layout/Landing.css
+++ b/client/src/components/layout/Landing.css
@@ -20,9 +20,9 @@ h5 {
   font-size: 24px !important;
 }
 
-.button-hover:hover {
+/* .button-hover:hover {
   opacity: 0.5;
-}
+} */
 
 
 /* MEDIA QUERIES */
