bottom form has background color and styled buttons

--- a/client/src/components/householdmembers/HouseholdMemberForm.css
+++ b/client/src/components/householdmembers/HouseholdMemberForm.css
@@ -1,3 +1,4 @@
+/*css styling for householdMemberForm.css*/
 div.col-md-8 {
     border-color: blue;
 }
@@ -5,4 +6,3 @@ div.col-md-8 {
 button.float-right.text-danger {
 
 }
-
