--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,8 +14,16 @@ p {
   font-size: 18px;
 }
 
+h3 {
+  color: #00adef;
+}
+
 
 /* BUTTONS */
+button {
+  color: white;
+}
+
 .button-hover:hover {
   box-shadow: 0px 0px 7px 7px #cccccc;
 }
@@ -26,27 +34,20 @@ p {
 }
 
 
-/* .waves-effect.waves-green.waves-ripple {
-    background-color: #42b984;
-    color: #ffffff;
-    width: 150px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    border-radius: 30px;
-    border: none;
-    letter-spacing: 1.5px;
-  }
+/* FORMS */
+form, button {
+  font-family: 'Poppins', sans-serif;
+}
 
-.waves-effect.waves-green.waves-ripple:hover {
-    background-color: #42b984;
-    color: #ffffff;
-    width: 150px;    
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    border-radius: 30px;
-    border: none;
-    letter-spacing: 1.5px;
-  } */
+.form-label {
+  font-size: 20px;
+  color: #00adef;
+}
+
+#formValue, #formReward, #formDescription, #formFrequency {
+  border-radius: 30px;
+  font-size: 16px;
+}
 
   
 /* FOOTER */
