--- a/client/src/components/householdmembers/HouseholdMemberForm.css
+++ b/client/src/components/householdmembers/HouseholdMemberForm.css
@@ -1,8 +1,8 @@
 /*css styling for householdMemberForm.css*/
-div.col-md-8 {
+/* div.col-md-8 {
     border-color: blue;
 }
 
-button.float-right.text-danger {
+/* button.float-right.text-danger {
 
-}
+} */
