--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,7 +57,7 @@ form, button {
     font-family: Poppins, sans-serif;
     font-size: 20px;
     text-align: center;
-    height: 80px;
+    /* height: 80px; */
     width: 100%;
     position: sticky;
     bottom: 0;
