--- a/client/src/components/game/game.css
+++ b/client/src/components/game/game.css
@@ -35,7 +35,7 @@ table {
   transition: background-color 0.5s, color 0.5s;
 }
 
-.cell {
+/* /* .cell {
   height: 70px;
   width: 70px;
   background-color: #1990ff;
@@ -44,8 +44,8 @@ table {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-}
-
+} */
+/* 
 .circle {
   height: 15px;
   width: 15px;
@@ -93,9 +93,11 @@ table {
   background-color: yellow;
   border-radius: 100px;
   transition: background-color 0.5s;
-}
+} */ */
 
 .cell {
+    height: 70px;
+    width: 70px;
   border: 1px solid black;
   border-radius: 50%;
   display: inline-block;
@@ -106,14 +108,26 @@ table {
   margin-bottom: -6px;
 }
 
+@media only screen and (max-width: 600px) {
+    .cell {
+        height: 50px;
+        width: 50px;
+        border: 1px solid black;
+        border-radius: 50%;
+        display: inline-block;
+        padding: 10px;
+        font: monospace;
+        cursor: pointer;
+        margin-top: 0;
+        margin-bottom: -6px;
+      }
+}
+
 .game-container {
   margin-top: 50px;
   margin-bottom: 50px;
 }
 
-/* .game-row:last-child {
-  margin-top: -50px;
-} */
 
 .grid {
   border: black;
