--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -1,3 +1,23 @@
+.dashboard-container {
+  background:
+  /* linear-gradient(
+    rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0.3)
+  ), */
+  /* url("https://image.freepik.com/free-photo/rustic-wood-panel_53876-16245.jpg"); */
+  url("https://images.pexels.com/photos/3773570/pexels-photo-3773570.png");
+  /* url("https://images.pexels.com/photos/373548/pexels-photo-373548.jpeg"); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+}
+
+p.dashboard {
+  font-size: 18px;
+  text-align: center;
+  color: white;
+}
+
 h3.dashboard {
   color: #00adef;
   font-size: 36px;
@@ -17,6 +37,8 @@ h3.dashboard {
 
   .module:hover {
       background: #08124B;
+      animation: pulse;
+      animation-duration: 0.5s;
   }
   
   .mid h2 {
@@ -32,6 +54,6 @@ h3.dashboard {
     transform: translate(-50%, -50%);
   }
 
-  .fa-list-ol, .fa-trophy, .fa-check, .fa-dice {
+  .dashboard-icons {
     font-size: 50px;
   }
