--- a/client/src/components/about/About.css
+++ b/client/src/components/about/About.css
@@ -1,3 +1,24 @@
-/* .authors {
-    color: black;
-} */
+/*About page
+Contribution section of page
+*/
+
+ul.namelist {
+    list-style-type: none;
+    text-align: center;
+    padding: 0;
+}
+
+#listitemdd {
+    text-decoration: none;
+    font-size: 20px;
+}
+
+#listitemdd:hover {
+    text-decoration: none;
+    color: rgb(0, 0, 31);
+}
+
+#listitemh:hover {
+    text-decoration: none;
+    color: rgb(0, 0, 31); 
+}
