--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -57,3 +57,11 @@ h3.dashboard {
   .dashboard-icons {
     font-size: 50px;
   }
+
+  .dateandtime {
+    text-align: center;
+    color: #ffffff;
+    font-weight: 900;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+  }
