Fixing sticky footer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-body, p {
+html, body, p {
     font-family: 'Poppins', sans-serif;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 0 auto;
+  height: 100vh;
 }
 
 
@@ -53,7 +67,6 @@ form, button {
 }
 
 #formValue, #formReward, #formDescription, #formFrequency {
-  /* border-radius: 30px; */
   font-size: 16px;
 }
 
@@ -71,10 +84,16 @@ form, button {
     font-family: Poppins, sans-serif;
     font-size: 20px;
     text-align: center;
-    height: 80px;
+    height: 50px;
     width: 100%;
-    position: sticky;
+    position: fixed;
     bottom: 0;
+    left: 0;
+    padding: 12px;
+}
+
+.footer {
+  flex-shrink: 0;
 }
 
   div a {
