--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -1,8 +1,8 @@
 .dashboard-container {
   background:
   linear-gradient(
-    rgba(0, 0, 0, 0.4),
-    rgba(0, 0, 0, 0.4)
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
   ),
   url("https://images.pexels.com/photos/373548/pexels-photo-373548.jpeg");
   background-size: cover;
@@ -14,6 +14,7 @@ p.dashboard {
   font-size: 18px;
   text-align: center;
   color: white;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 h3.dashboard {
@@ -21,6 +22,7 @@ h3.dashboard {
   font-size: 36px;
   text-align: center;
   font-weight: 900;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .module {
@@ -63,4 +65,5 @@ h3.dashboard {
     font-weight: 900;
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
+    text-shadow: 2px 2px 4px #000000;
   }
