move About out of Navbar and linked from the Landing page

--- a/client/src/components/layout/Landing.css
+++ b/client/src/components/layout/Landing.css
@@ -32,6 +32,10 @@ h5 {
   font-size: 24px !important;
 }
 
+.aboutCC {
+  text-decoration: underline;
+}
+
 .aboutCC:hover {
   color: #ffffff !important;
 }
