--- a/client/src/components/game/game.css
+++ b/client/src/components/game/game.css
@@ -7,6 +7,12 @@ h1 {
   font-size: 50px;
 }
 
+.center {
+  
+  align-items: 'center';
+}
+
+
 table {
   margin: 0 auto;
   border-spacing: 0px 0px;
@@ -35,7 +41,7 @@ table {
   transition: background-color 0.5s, color 0.5s;
 } */
 
- .cell {
+  .cell {
   height: 70px;
   width: 70px;
   background-color: #1990ff;
@@ -44,7 +50,7 @@ table {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-} */
+} */ */
 
 .circle {
   height: 15px;
